[risk=low][no ticket] Converted "loop over get" DB calls to "get all in", plus some other cleanups (#9091)
* Consolidate looped get-user and get-workspace calls
* functionalize